# stream-command

./: .gitignore  LICENSE  README.md  project_exporter_revised.py  pyproject.toml
stream_control/: __main__.py  app.py
stream_control/core/: audio.py  config.py  credentials.py  logging_setup.py  models.py  paths.py  platform.py  tls.py
stream_control/plugins/: __init__.py  base.py  builtin.py  context.py  host.py
stream_control/plugins/broadcast/: __init__.py  plugin.py
stream_control/plugins/chat/: __init__.py  plugin.py
stream_control/plugins/dashboard/: __init__.py  plugin.py
stream_control/plugins/hotkeys/: __init__.py  plugin.py
stream_control/plugins/integrations/: __init__.py  plugin.py
stream_control/plugins/music/: __init__.py  plugin.py
stream_control/plugins/obs_production/: __init__.py  plugin.py
stream_control/plugins/setup/: __init__.py  (+1 more)
stream_control/services/: hotkey_service.py  music_service.py  obs_service.py  overlay_server.py  setup_diagnostics_service.py  soundboard_service.py  streamlabs_service.py  twitch_auth_service.py  twitch_chat_service.py  twitch_service.py
stream_control/ui/: main_window.py  theme.py
tests/: test_broadcast_plugin.py  test_builtin_plugins.py  test_chat_plugin.py  test_config_store.py  test_credential_store.py  test_hotkey_service.py  test_models.py  test_music_service.py  test_overlay_server.py  test_plugin_host.py  test_secure_settings_serialization.py  test_setup_diagnostics_service.py  test_simulated_integrations.py  test_twitch_auth_service.py  test_twitch_chat_service.py  test_twitch_service.py
(+3 files in other folders)
